package ucd.comp3013j.ems.model.controllers;

public class EventSystem {
    
}
